Use of Trove's Map and Set